<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/nav_favorite"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_message"
        android:enabled="true"
        android:icon="@drawable/ic_chat_bubble"
        android:title="@string/nav_message"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_user"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_user"
        app:showAsAction="withText" />


</menu>